# SummerSchool

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  complex.cpp  complex.h  config  console_painting.cpp  console_painting.h  main.cpp  main.h  run.bat  square.cpp  square.h  tests  unit_tests.cpp  unit_tests.h
TXLib/: TXLib.h  txlib.cpp
experiment/: aboa.cpp  mas.cpp  run.cpp
files/: a  b  tests
first/: square.cpp
flags/: flags_controller.cpp  flags_controller.h
html/: _r_e_a_d_m_e_8md.html  _t_x_lib_8h.html  _t_x_lib_8h_source.html  annotated.html  classes.html  classtx_auto_lock.html  complex_8cpp.html  complex_8cpp_source.html  complex_8h.html  complex_8h_source.html  console__painting_8cpp.html  console__painting_8cpp_source.html  console__painting_8h.html  console__painting_8h_source.html  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_f.html  globals_func.html  globals_g.html  globals_h.html  globals_i.html  globals_l.html  globals_m.html  globals_n.html  globals_o.html  (+39 more)
latex/: _t_x_lib_8h.tex  _t_x_lib_8h_source.tex  annotated.tex  classtx_auto_lock.tex  complex_8cpp.tex  complex_8cpp_source.tex  complex_8h.tex  complex_8h_source.tex  console__painting_8cpp.tex  console__painting_8cpp_source.tex  console__painting_8h.tex  console__painting_8h_source.tex  files.tex  group___misc.tex  (+27 more)
(+124 files in other folders)
